--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,12 +15,12 @@
 				<form id="login-form" th:action="@{/login}" class="card-body" method="post">
 					<div class="form-group">
 						<label for="username">Usuário</label>
-						<input name="username"  class="form-control" placeholder="usuário" autofocus="autofocus">
+						<input name="username"  class="form-control" placeholder="usuário" autofocus="autofocus" id="username">
 					</div>
 
 					<div class="form-group">
 						<label for="password">Senha</label>
-						<input type="password" name="password" class="form-control" placeholder="senha">
+						<input type="password" name="password" class="form-control" placeholder="senha" id="password">
 					</div>
 
 					<button class="btn btn-primary" type="submit">Login</button>
